--- a/requirements.txt
+++ b/requirements.txt
@@ -1,101 +1,110 @@
-anyio==4.3.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
+-i https://pypi.org/simple
+anyio==4.3.0; python_version >= '3.8'
+argon2-cffi==23.1.0; python_version >= '3.7'
+argon2-cffi-bindings==21.2.0; python_version >= '3.6'
+arrow==1.3.0; python_version >= '3.8'
 asttokens==2.4.1
-async-lru==2.0.4
-attrs==23.2.0
-Babel==2.14.0
-beautifulsoup4==4.12.3
-bleach==6.1.0
-certifi==2024.2.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-comm==0.2.2
-debugpy==1.8.1
-decorator==5.1.1
-defusedxml==0.7.1
-executing==2.0.1
+async-lru==2.0.4; python_version >= '3.8'
+attrs==23.2.0; python_version >= '3.7'
+babel==2.14.0; python_version >= '3.7'
+beautifulsoup4==4.12.3; python_full_version >= '3.6.0'
+bleach==6.1.0; python_version >= '3.8'
+certifi==2024.2.2; python_version >= '3.6'
+cffi==1.16.0; python_version >= '3.8'
+charset-normalizer==3.3.2; python_full_version >= '3.7.0'
+click==8.1.7; python_version >= '3.7'
+click-plugins==1.1.1
+cligj==0.7.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3' and python_version < '4'
+comm==0.2.2; python_version >= '3.8'
+debugpy==1.8.1; python_version >= '3.8'
+decorator==5.1.1; python_version >= '3.5'
+defusedxml==0.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+executing==2.0.1; python_version >= '3.5'
 fastjsonschema==2.19.1
+fiona==1.9.6; python_version >= '3.7'
 fqdn==1.5.1
-h11==0.14.0
-httpcore==1.0.4
-httpx==0.27.0
-idna==3.6
-ipykernel==6.29.3
-ipython==8.22.2
-ipywidgets==8.1.2
+geopandas==0.14.3; python_version >= '3.9'
+h11==0.14.0; python_version >= '3.7'
+httpcore==1.0.4; python_version >= '3.8'
+httpx==0.27.0; python_version >= '3.8'
+idna==3.6; python_version >= '3.5'
+ipykernel==6.29.3; python_version >= '3.8'
+ipython==8.22.2; python_version >= '3.10'
+ipywidgets==8.1.2; python_version >= '3.7'
 isoduration==20.11.0
-jedi==0.19.1
-Jinja2==3.1.3
-json5==0.9.24
+jedi==0.19.1; python_version >= '3.6'
+jinja2==3.1.3; python_version >= '3.7'
+json5==0.9.24; python_version >= '3.8'
 jsonpointer==2.4
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
+jsonschema[format-nongpl]==4.21.1; python_version >= '3.8'
+jsonschema-specifications==2023.12.1; python_version >= '3.8'
 jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.10.0
-jupyter-lsp==2.2.4
-jupyter_client==8.6.1
-jupyter_core==5.7.2
-jupyter_server==2.13.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.1.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.25.4
-jupyterlab_widgets==3.0.10
-MarkupSafe==2.1.5
-matplotlib-inline==0.1.6
-mistune==3.0.2
-nbclient==0.10.0
-nbconvert==7.16.3
-nbformat==5.10.3
-nest-asyncio==1.6.0
-notebook==7.1.2
-notebook_shim==0.2.4
-numpy==1.26.4
-overrides==7.7.0
-packaging==24.0
-pandas==2.2.1
-pandocfilters==1.5.1
-parso==0.8.3
-pexpect==4.9.0
-platformdirs==4.2.0
-prometheus_client==0.20.0
-prompt-toolkit==3.0.43
-psutil==5.9.8
+jupyter-client==8.6.1; python_version >= '3.8'
+jupyter-console==6.6.3; python_version >= '3.7'
+jupyter-core==5.7.2; python_version >= '3.8'
+jupyter-events==0.10.0; python_version >= '3.8'
+jupyter-lsp==2.2.4; python_version >= '3.8'
+jupyter-server==2.13.0; python_version >= '3.8'
+jupyter-server-terminals==0.5.3; python_version >= '3.8'
+jupyterlab==4.1.5; python_version >= '3.8'
+jupyterlab-pygments==0.3.0; python_version >= '3.8'
+jupyterlab-server==2.25.4; python_version >= '3.8'
+jupyterlab-widgets==3.0.10; python_version >= '3.7'
+markupsafe==2.1.5; python_version >= '3.7'
+matplotlib-inline==0.1.6; python_version >= '3.5'
+mistune==3.0.2; python_version >= '3.7'
+nbclient==0.10.0; python_full_version >= '3.8.0'
+nbconvert==7.16.3; python_version >= '3.8'
+nbformat==5.10.3; python_version >= '3.8'
+nest-asyncio==1.6.0; python_version >= '3.5'
+notebook==7.1.2; python_version >= '3.8'
+notebook-shim==0.2.4; python_version >= '3.7'
+numpy==1.26.4; python_version >= '3.9'
+overrides==7.7.0; python_version >= '3.6'
+packaging==24.0; python_version >= '3.7'
+pandas==2.2.1; python_version >= '3.9'
+pandocfilters==1.5.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+parso==0.8.3; python_version >= '3.6'
+pexpect==4.9.0; sys_platform != 'win32' and sys_platform != 'emscripten'
+platformdirs==4.2.0; python_version >= '3.8'
+prometheus-client==0.20.0; python_version >= '3.8'
+prompt-toolkit==3.0.43; python_full_version >= '3.7.0'
+psutil==5.9.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyarrow==15.0.2; python_version >= '3.8'
 pycparser==2.21
-Pygments==2.17.2
-python-dateutil==2.9.0.post0
-python-json-logger==2.0.7
+pygments==2.17.2; python_version >= '3.7'
+pyproj==3.6.1; python_version >= '3.9'
+python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+python-json-logger==2.0.7; python_version >= '3.6'
 pytz==2024.1
-PyYAML==6.0.1
-pyzmq==25.1.2
-qtconsole==5.5.1
-QtPy==2.4.1
-referencing==0.34.0
-requests==2.31.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.18.0
-Send2Trash==1.8.2
-six==1.16.0
-sniffio==1.3.1
-soupsieve==2.5
+pyyaml==6.0.1; python_version >= '3.6'
+pyzmq==25.1.2; python_version >= '3.6'
+qtconsole==5.5.1; python_version >= '3.8'
+qtpy==2.4.1; python_version >= '3.7'
+referencing==0.34.0; python_version >= '3.8'
+requests==2.31.0; python_version >= '3.7'
+rfc3339-validator==0.1.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+rfc3986-validator==0.1.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+rpds-py==0.18.0; python_version >= '3.8'
+send2trash==1.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+shapely==2.0.3; python_version >= '3.7'
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+sniffio==1.3.1; python_version >= '3.7'
+soupsieve==2.5; python_version >= '3.8'
 stack-data==0.6.3
-terminado==0.18.1
-tinycss2==1.2.1
-tornado==6.4
-traitlets==5.14.2
-types-python-dateutil==2.9.0.20240316
-tzdata==2024.1
+terminado==0.18.1; python_version >= '3.8'
+tinycss2==1.2.1; python_version >= '3.7'
+tornado==6.4; python_version >= '3.8'
+traitlets==5.14.2; python_version >= '3.8'
+types-python-dateutil==2.9.0.20240316; python_version >= '3.8'
+tzdata==2024.1; python_version >= '2'
 uri-template==1.3.0
-urllib3==2.2.1
+urllib3==2.2.1; python_version >= '3.8'
 wcwidth==0.2.13
 webcolors==1.13
 webencodings==0.5.1
-websocket-client==1.7.0
-widgetsnbextension==4.0.10
-XLML==0.1.2
+websocket-client==1.7.0; python_version >= '3.8'
+widgetsnbextension==4.0.10; python_version >= '3.7'
+xlml==0.1.2
