--- a/.github/workflows/schedule_scraping.yml
+++ b/.github/workflows/schedule_scraping.yml
@@ -27,3 +27,6 @@ jobs:
 
       - name: Run the script
         run: pipenv run python3 scraping/run_scraper.py
+        env: # Pass the repo secrets to the script as environment variables
+          START_URL_2DAYS: ${{ secrets.START_URL_2DAYS }}
+          START_URL_7DAYS: ${{ secrets.START_URL_7DAYS }}
