--- a/.github/workflows/schedule_scraping.yml
+++ b/.github/workflows/schedule_scraping.yml
@@ -31,13 +31,10 @@ jobs:
           START_URL_2DAYS: ${{ secrets.START_URL_2DAYS }}
           START_URL_7DAYS: ${{ secrets.START_URL_7DAYS }}
 
-      - name: Configure Git
+      - name: Commit and Push Changes
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
-
-      - name: Commit and Push Changes
-        run: |
-          git add .  # Adds all changes, including new files
-          git commit -m "Auto-update data files" -a  # Commits the changes
-          git push
+          git add .
+          git commit -m "Auto-update data files" -a || echo "No changes to commit"
+          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.ref }}
