--- a/.github/workflows/schedule_scraping.yml
+++ b/.github/workflows/schedule_scraping.yml
@@ -5,12 +5,13 @@ on:
     # Runs at 17:00 UTC every 5 days
     - cron: "0 17 */5 * *"
   workflow_dispatch:
-
+permissions:
+  contents: write
 jobs:
   run-script:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           persist-credentials: false
 
@@ -33,8 +34,8 @@ jobs:
 
       - name: Commit and Push Changes
         run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
+          git config --global user.email "MerlinSchaefer@users.noreply.github.com"
+          git config --global user.name "Merlin Schaefer"
           git add .
           git commit -m "Auto-update data files" -a || echo "No changes to commit"
-          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.ref }}
+          git push
