--- a/.github/workflows/schedule_scraping.yml
+++ b/.github/workflows/schedule_scraping.yml
@@ -15,27 +15,27 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.11.7"
-          # Using Python version 3.11
+      # - name: Set up Python 3.11
+      #   uses: actions/setup-python@v2
+      #   with:
+      #     python-version: "3.11.7"
+      #     # Using Python version 3.11
 
-      - name: Install dependencies
-        run: |
-          pip install pipenv
-          pipenv install
+      # - name: Install dependencies
+      #   run: |
+      #     pip install pipenv
+      #     pipenv install
 
-      - name: Run the script
-        run: pipenv run python3 scraping/run_scraper.py
-        env: # Pass the repo secrets to the script as environment variables
-          START_URL_2DAYS: ${{ secrets.START_URL_2DAYS }}
-          START_URL_7DAYS: ${{ secrets.START_URL_7DAYS }}
-
+      # - name: Run the script
+      #   run: pipenv run python3 scraping/run_scraper.py
+      #   env: # Pass the repo secrets to the script as environment variables
+      #     START_URL_2DAYS: ${{ secrets.START_URL_2DAYS }}
+      #     START_URL_7DAYS: ${{ secrets.START_URL_7DAYS }}
+      - name: Create test file
+        run: date +%s > test.txt
       - name: Commit and Push Changes
         run: |
           git config --global user.email "MerlinSchaefer@users.noreply.github.com"
           git config --global user.name "Merlin Schaefer"
-          git add .
-          git commit -m "Auto-update data files" -a || echo "No changes to commit"
+          git commit -am "Auto-update data files"
           git push
