--- a/.github/workflows/schedule_scraping.yml
+++ b/.github/workflows/schedule_scraping.yml
@@ -37,5 +37,6 @@ jobs:
         run: |
           git config --global user.email "MerlinSchaefer@users.noreply.github.com"
           git config --global user.name "Merlin Schaefer"
-          git commit -am "Auto-update data files"
+          git add .
+          git commit -m "Auto-update data files"
           git push
