--- a/.github/workflows/schedule_scraping.yml
+++ b/.github/workflows/schedule_scraping.yml
@@ -4,7 +4,6 @@ on:
   schedule:
     # Runs at 17:00 UTC every 5 days
     - cron: "0 17 */5 * *"
-  workflow_dispatch:
 
 jobs:
   run-script:
@@ -14,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          persist-credentials: false
+          persist-credentials: true
 
       # - name: Set up Python 3.11
       #   uses: actions/setup-python@v2
