--- a/.github/workflows/schedule_scraping.yml
+++ b/.github/workflows/schedule_scraping.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     # Runs at 17:00 UTC every 5 days
     - cron: "0 17 */5 * *"
-
+  workflow_dispatch:
 jobs:
   run-script:
     runs-on: ubuntu-latest
