--- a/.github/workflows/schedule_scraping.yml
+++ b/.github/workflows/schedule_scraping.yml
@@ -1,9 +1,9 @@
-name: Run Scraping Every 5 Days
+name: Run Scraping Every 3 Days at 17:00
 
 on:
   schedule:
-    # Runs at 17:00 UTC every 5 days
-    - cron: "0 17 */5 * *"
+    # Runs at 17:00 UTC every 3 days
+    - cron: "0 17 */3 * *"
   workflow_dispatch:
 jobs:
   run-script:
