--- a/requirements.txt
+++ b/requirements.txt
@@ -6,16 +6,19 @@ arrow==1.3.0; python_version >= '3.8'
 asttokens==2.4.1
 async-lru==2.0.4; python_version >= '3.8'
 attrs==23.2.0; python_version >= '3.7'
+azure-core==1.30.1; python_version >= '3.7'
+azure-storage-blob==12.19.1; python_version >= '3.7'
 babel==2.14.0; python_version >= '3.7'
 beautifulsoup4==4.12.3; python_full_version >= '3.6.0'
 bleach==6.1.0; python_version >= '3.8'
 certifi==2024.2.2; python_version >= '3.6'
-cffi==1.16.0; python_version >= '3.8'
+cffi==1.16.0; platform_python_implementation != 'PyPy'
 charset-normalizer==3.3.2; python_full_version >= '3.7.0'
 click==8.1.7; python_version >= '3.7'
 click-plugins==1.1.1
 cligj==0.7.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3' and python_version < '4'
 comm==0.2.2; python_version >= '3.8'
+cryptography==42.0.5; python_version >= '3.7'
 debugpy==1.8.1; python_version >= '3.8'
 decorator==5.1.1; python_version >= '3.5'
 defusedxml==0.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
@@ -25,16 +28,17 @@ fiona==1.9.6; python_version >= '3.7'
 fqdn==1.5.1
 geopandas==0.14.3; python_version >= '3.9'
 h11==0.14.0; python_version >= '3.7'
-httpcore==1.0.4; python_version >= '3.8'
+httpcore==1.0.5; python_version >= '3.8'
 httpx==0.27.0; python_version >= '3.8'
-idna==3.6; python_version >= '3.5'
-ipykernel==6.29.3; python_version >= '3.8'
-ipython==8.22.2; python_version >= '3.10'
+idna==3.7; python_version >= '3.5'
+ipykernel==6.29.4; python_version >= '3.8'
+ipython==8.23.0; python_version >= '3.10'
 ipywidgets==8.1.2; python_version >= '3.7'
+isodate==0.6.1
 isoduration==20.11.0
 jedi==0.19.1; python_version >= '3.6'
 jinja2==3.1.3; python_version >= '3.7'
-json5==0.9.24; python_version >= '3.8'
+json5==0.9.25; python_version >= '3.8'
 jsonpointer==2.4
 jsonschema[format-nongpl]==4.21.1; python_version >= '3.8'
 jsonschema-specifications==2023.12.1; python_version >= '3.8'
@@ -43,28 +47,28 @@ jupyter-client==8.6.1; python_version >= '3.8'
 jupyter-console==6.6.3; python_version >= '3.7'
 jupyter-core==5.7.2; python_version >= '3.8'
 jupyter-events==0.10.0; python_version >= '3.8'
-jupyter-lsp==2.2.4; python_version >= '3.8'
-jupyter-server==2.13.0; python_version >= '3.8'
+jupyter-lsp==2.2.5; python_version >= '3.8'
+jupyter-server==2.14.0; python_version >= '3.8'
 jupyter-server-terminals==0.5.3; python_version >= '3.8'
-jupyterlab==4.1.5; python_version >= '3.8'
+jupyterlab==4.1.6; python_version >= '3.8'
 jupyterlab-pygments==0.3.0; python_version >= '3.8'
-jupyterlab-server==2.25.4; python_version >= '3.8'
+jupyterlab-server==2.26.0; python_version >= '3.8'
 jupyterlab-widgets==3.0.10; python_version >= '3.7'
 markupsafe==2.1.5; python_version >= '3.7'
-matplotlib-inline==0.1.6; python_version >= '3.5'
+matplotlib-inline==0.1.7; python_version >= '3.8'
 mistune==3.0.2; python_version >= '3.7'
 nbclient==0.10.0; python_full_version >= '3.8.0'
 nbconvert==7.16.3; python_version >= '3.8'
-nbformat==5.10.3; python_version >= '3.8'
+nbformat==5.10.4; python_version >= '3.8'
 nest-asyncio==1.6.0; python_version >= '3.5'
-notebook==7.1.2; python_version >= '3.8'
+notebook==7.1.3; python_version >= '3.8'
 notebook-shim==0.2.4; python_version >= '3.7'
-numpy==1.26.4; python_version >= '3.9'
+numpy==1.26.4; python_version == '3.11'
 overrides==7.7.0; python_version >= '3.6'
 packaging==24.0; python_version >= '3.7'
-pandas==2.2.1; python_version >= '3.9'
+pandas==2.2.2; python_version >= '3.9'
 pandocfilters==1.5.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-parso==0.8.3; python_version >= '3.6'
+parso==0.8.4; python_version >= '3.6'
 pexpect==4.9.0; sys_platform != 'win32' and sys_platform != 'emscripten'
 platformdirs==4.2.0; python_version >= '3.8'
 prometheus-client==0.20.0; python_version >= '3.8'
@@ -73,14 +77,14 @@ psutil==5.9.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2,
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==15.0.2; python_version >= '3.8'
-pycparser==2.21
+pycparser==2.22; python_version >= '3.8'
 pygments==2.17.2; python_version >= '3.7'
 pyproj==3.6.1; python_version >= '3.9'
 python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-json-logger==2.0.7; python_version >= '3.6'
 pytz==2024.1
 pyyaml==6.0.1; python_version >= '3.6'
-pyzmq==25.1.2; python_version >= '3.6'
+pyzmq==26.0.0; python_version >= '3.7'
 qtconsole==5.5.1; python_version >= '3.8'
 qtpy==2.4.1; python_version >= '3.7'
 referencing==0.34.0; python_version >= '3.8'
@@ -88,8 +92,8 @@ requests==2.31.0; python_version >= '3.7'
 rfc3339-validator==0.1.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 rfc3986-validator==0.1.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 rpds-py==0.18.0; python_version >= '3.8'
-send2trash==1.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-shapely==2.0.3; python_version >= '3.7'
+send2trash==1.8.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+shapely==2.0.4; python_version >= '3.7'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sniffio==1.3.1; python_version >= '3.7'
 soupsieve==2.5; python_version >= '3.8'
@@ -99,6 +103,7 @@ tinycss2==1.2.1; python_version >= '3.7'
 tornado==6.4; python_version >= '3.8'
 traitlets==5.14.2; python_version >= '3.8'
 types-python-dateutil==2.9.0.20240316; python_version >= '3.8'
+typing-extensions==4.11.0; python_version >= '3.8'
 tzdata==2024.1; python_version >= '2'
 uri-template==1.3.0
 urllib3==2.2.1; python_version >= '3.8'
