Feature/write to storage bucket (#4)
* Adjust scraping workflow to write to storage bucket

* Add azure storage blob dep

* Remove strict python version from pipenv

* Adjust scraping script

* Auto-update data files

---------

Co-authored-by: MerlinSchaefer <MerlinSchaefer@users.noreply.github.com>

--- a/Pipfile
+++ b/Pipfile
@@ -10,9 +10,11 @@ jupyter = "*"
 ipykernel = "*"
 geopandas = "*"
 pyarrow = "*"
+azure-storage-blob = "*"
+python-dotenv = "*"
+azure-identity = "*"
 
 [dev-packages]
 
 [requires]
 python_version = "3.11"
-python_full_version = "3.11.7"
